--- a/calc.css
+++ b/calc.css
@@ -18,6 +18,28 @@ body, html {
     padding: 0;
 }
 
+/* @keyframes rotating {
+  from {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.dollar {
+-webkit-animation: rotating 2s linear infinite;
+  -moz-animation: rotating 2s linear infinite;
+  -ms-animation: rotating 2s linear infinite;
+  -o-animation: rotating 2s linear infinite;
+  animation: rotating 2s linear infinite;
+} */
+
+
 #container {
     background-image: linear-gradient(rgba(3, 15, 34, 0.97), rgb(255, 255, 255, 0.7));
     position: relative;
@@ -47,7 +69,6 @@ body, html {
       z-index:5;
       color:rgb(170, 193, 218);
       font-size: 2rem;
-      /* transition: 2s ease-in-out; */
   }
 
   .bottomIcon {
@@ -69,9 +90,6 @@ body, html {
       transition: 2s ease-in-out;
   }
 
-  .topIconRotate {
-    transform: rotate(1800deg);
-}
 
 .bottomIcon2 {
       position: absolute;
@@ -294,7 +312,6 @@ option {
     font-size: 1.6rem;
     background-image:linear-gradient(to top , rgb(112, 0, 0), rgb(209, 1, 1));
     box-shadow:0px 0px 30px rgb(28, 42, 59);
-    
 }
 
 .heart {
@@ -358,17 +375,20 @@ option {
     }
     .bottomIcon{
         left: 75px;
-        bottom: 212px;
+        bottom: 207px;
     }
     .bottomIcon2{
         right: 75px;
-        bottom: 212px;
+        bottom: 207px;
     }
     #myButton {
         font-size: 1.2rem;
     }
     #people::placeholder{
         font-size: .8rem;
+    }
+    #totalTip{
+        font-size: 2.8rem;
     }
   }
 
@@ -382,5 +402,10 @@ option {
 
     .howMany, .howMuch, .service {
         font-size: .9rem;
+    }
+    .generous {
+        width: 280px;
+        height: 280px;
+        font-size: 1.4rem;
     }
 }
